--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
   <a routerLink="/tienda">Tienda</a>
   <a routerLink="/articulo">Artículo</a>
   <a routerLink="/cliente">Cliente</a>
+  <a routerLink="/articulotienda">Artículos - Tienda</a>
+  <a routerLink="/clientesarticulos">Clientes - Artículos</a>
   <div class="spacer"></div>
   <div>{{userName}}</div>
   <a routerLink="/auth" (click)="salir()">Salir</a>
