--- a/src/app/components/articulo/add-edit-articulo/add-edit-articulo.component.html
+++ b/src/app/components/articulo/add-edit-articulo/add-edit-articulo.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>{{tituloAccion}} Cliente</h1>
+<h1 mat-dialog-title>{{tituloAccion}} Artículo</h1>
 <div mat-dialog-content>
   <form [formGroup]="form" class="articulo-form">
     <mat-form-field appearance="fill">
